--- a/AutoMD5/AutoMD5.csproj
+++ b/AutoMD5/AutoMD5.csproj
@@ -70,6 +70,7 @@
     <Compile Include="info.xaml.cs">
       <DependentUpon>info.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ListItem.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
